Made sure that bleeding containers match site-wide gutter width. This stops mobile bug that caused images to bleed off the screen, creating extra space that made scrolling quite an adventure.

--- a/static/scss/_placeholders.scss
+++ b/static/scss/_placeholders.scss
@@ -36,8 +36,8 @@
 // --------------------------------------------
 
 %bleeding-container {
-  margin-left: -25px;
-  margin-right: -25px;
+  margin-left: -$site-margin;
+  margin-right: -$site-margin;
   @include mq(550px) {
     margin: 0;
   }
